--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
 	"require": {
 		"php": "^7.1",
 		"ext-phalcon": "^3.0",
-		"lvlapc/authentication-interfaces": "^1.0"
+		"lvlapc/authentication-interfaces": "^2.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"Lvlapc\\": "src/"
 		}
+	},
+	"require-dev": {
+		"codeception/base": "^3.0"
 	}
 }
